/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2015 NUBots <nubots@nubots.net>
 */

package messages.support.nubugger.proto;

import "messages/behaviour/proto/Behaviour.proto";
import "messages/input/proto/GameState.proto";
import "messages/Vector.proto";
import "messages/Matrix.proto";

message Overview {

	// Sensors
	optional float voltage = 1;
	optional float battery = 2;

	// Behaviour
    optional messages.behaviour.proto.Behaviour.State behaviour_state = 3;

    // Localisation
    optional vec2 robot_position = 4;
    optional mat22 robot_position_covariance = 6;
    optional vec2 robot_heading = 5;
    optional vec2 ball_position = 13;

    // Game controller
    optional messages.input.proto.GameState.Data.Mode game_mode = 7;
    optional messages.input.proto.GameState.Data.Phase game_phase = 8;
    optional messages.input.proto.GameState.Data.PenaltyReason penalty_reason = 9;

    // Hardware
    optional uint64 last_camera_image = 10;
    // TODO: motor overloads?

    // Vision
    optional uint64 last_seen_ball = 11;
    optional uint64 last_seen_goal = 12;

}
